Changed http verb on search user & improvements
