# docs/swagger.yaml
@@ -13,6 +13,14 @@ definitions:
     - email
     - username
     type: object
+  requests.SearchUserRequest:
+    properties:
+      email:
+        maxLength: 255
+        type: string
+    required:
+    - email
+    type: object
   responses.ErrorDetail:
     properties:
       message:
@@ -40,38 +48,6 @@ info:
   version: "1.0"
 paths:
   /v1/users:
-    get:
-      consumes:
-      - application/json
-      description: Retrieves a user's details by their email address
-      parameters:
-      - description: User email address
-        in: query
-        name: email
-        required: true
-        type: string
-      produces:
-      - application/json
-      responses:
-        "302":
-          description: Found
-          schema:
-            $ref: '#/definitions/responses.UserResponse'
-        "400":
-          description: Bad Request
-          schema:
-            $ref: '#/definitions/responses.ErrorResponse'
-        "404":
-          description: Not Found
-          schema:
-            $ref: '#/definitions/responses.ErrorResponse'
-        "500":
-          description: Internal Server Error
-          schema:
-            $ref: '#/definitions/responses.ErrorResponse'
-      summary: Get user by email
-      tags:
-      - users
     post:
       consumes:
       - application/json
@@ -103,6 +79,38 @@ paths:
           schema:
             $ref: '#/definitions/responses.ErrorResponse'
       summary: Create a user
+      tags:
+      - users
+  /v1/users/search:
+    post:
+      consumes:
+      - application/json
+      description: Searches for a user
+      parameters:
+      - description: User to search
+        in: body
+        name: user
+        required: true
+        schema:
+          $ref: '#/definitions/requests.SearchUserRequest'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            items:
+              $ref: '#/definitions/responses.UserResponse'
+            type: array
+        "400":
+          description: Bad Request
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+        "500":
+          description: Internal Server Error
+          schema:
+            $ref: '#/definitions/responses.ErrorResponse'
+      summary: Search user
       tags:
       - users
 swagger: "2.0"
