# internal/adapters/chi-server/handlers/users/requests/user.go
@@ -4,3 +4,7 @@ type CreateUserRequest struct {
 	Username string `json:"username" validate:"required,min=3,max=255"`
 	Email    string `json:"email" validate:"required,email,max=255"`
 }
+
+type SearchUserRequest struct {
+	Email string `json:"email" validate:"required,email,max=255"`
+}
